// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`文字排版 快照测试 基本文字排版 1`] = `
<h2
  className="sc-AxjAm ibFIMm sinoui-typography sinoui-typography--h2"
  color="textPrimary"
  type="h2"
>
  H2
</h2>
`;

exports[`文字排版 快照测试 设置属性 1`] = `
Array [
  <h2
    className="sc-AxjAm ibFIMm sinoui-typography sinoui-typography--h2"
    color="textPrimary"
    type="h2"
  >
    H2
  </h2>,
  <h2
    className="sc-AxjAm jiCLlO sinoui-typography sinoui-typography--h2"
    color="textPrimary"
    type="h2"
  >
    H2
  </h2>,
  <h2
    className="sc-AxjAm dAOlhv sinoui-typography sinoui-typography--h2"
    color="textPrimary"
    type="h2"
  >
    H2
  </h2>,
  <h2
    className="sc-AxjAm ZcZxS sinoui-typography sinoui-typography--h2"
    color="success"
    type="h2"
  >
    H2
  </h2>,
  <h2
    className="sc-AxjAm cCDsxO sinoui-typography sinoui-typography--h2 sinoui-typography--gutter-bottom"
    color="textPrimary"
    type="h2"
  >
    H2
  </h2>,
]
`;

exports[`文字排版 快照测试 颜色设置 1`] = `
Array [
  <h2
    className="sc-AxjAm ibFIMm sinoui-typography sinoui-typography--h2"
    color="textPrimary"
    type="h2"
  >
    H2
  </h2>,
  <h2
    className="sc-AxjAm kTBFqR sinoui-typography sinoui-typography--h2"
    color="primary"
    type="h2"
  >
    H2
  </h2>,
  <h2
    className="sc-AxjAm hWElxq sinoui-typography sinoui-typography--h2"
    color="secondary"
    type="h2"
  >
    H2
  </h2>,
  <h2
    className="sc-AxjAm ibFIMm sinoui-typography sinoui-typography--h2"
    color="textPrimary"
    type="h2"
  >
    H2
  </h2>,
  <h2
    className="sc-AxjAm hkRqlb sinoui-typography sinoui-typography--h2"
    color="textSecondary"
    type="h2"
  >
    H2
  </h2>,
  <h2
    className="sc-AxjAm gSTTun sinoui-typography sinoui-typography--h2"
    color="error"
    type="h2"
  >
    H2
  </h2>,
  <h2
    className="sc-AxjAm jRWPym sinoui-typography sinoui-typography--h2"
    color="warning"
    type="h2"
  >
    H2
  </h2>,
  <h2
    className="sc-AxjAm ZcZxS sinoui-typography sinoui-typography--h2"
    color="success"
    type="h2"
  >
    H2
  </h2>,
  <h2
    className="sc-AxjAm avwSu sinoui-typography sinoui-typography--h2"
    color="info"
    type="h2"
  >
    H2
  </h2>,
]
`;
